# evtx-auditor

./: .gitignore  EVTXAuditor.spec  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: USER_GUIDE.md
docs/superpowers/plans/: 2026-07-04-windows-evtx-auditor.md  2026-07-05-legacy-evt-support.md
docs/superpowers/specs/: 2026-07-04-windows-evtx-auditor-design.md  2026-07-05-legacy-evt-support-design.md
scripts/: build.ps1  make_user_guide_pdf.py  verify_real_archives.py
src/evtx_auditor/: __init__.py  analyzer.py  archive.py  coordinator.py  discovery.py  legacy_evt.py  main.py  models.py  parser.py  report.py  report_template.html  rules.py  verification.py
src/evtx_auditor/gui/: main_window.py  worker.py
tests/: conftest.py  test_analyzer.py  test_coordinator.py  test_discovery_archive.py  test_gui.py  test_legacy_evt.py  test_models.py  test_packaging.py  test_parser.py  test_report.py  test_rules.py  test_verification.py
tests/fixtures/: critical_event.xml  partial_event.xml  security_4625.xml
