[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "evtx-auditor"
version = "1.0.0"
description = "Offline Windows EVTX/EVT archive auditor"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Абдрахманов Амаль Даулетович" },
]
dependencies = [
  "PySide6==6.11.1",
  "python-evtx==0.8.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
evtx_auditor = ["report_template.html"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
